# open2open

./: .gitignore  .gitmodules  CMakeLists.txt  EXPAND.md  NURBS_BR_REP_ANALYSIS.md  OPENNURBS_3DM_EXAMPLES_STATUS.md  README.md  README_NURBS_ANALYSIS.md  TRANSLATE.md  TRANSLATION_PLAN_SUMMARY.md
.github/: copilot-instructions.md
FreeCAD_Models/phasma-mech-assembly/FreeCAD native models/: +Z plate aluminum.FCStd  +Z plate.FCStd  -Y plate.FCStd  90deg deployed panel array.FCStd  ADCS adapter.FCStd  Antenna HDRM Stowed.FCStd  Antenna HDRM Sun Sensor Stowed.FCStd  CubeMag & Shunt mount.FCStd  CubeSense Sun sensor.FCStd  G5ANT-1AS1.FCStd  GNSS Antenna HDRM Deployed.FCStd  GNSS PCB.FCStd  S band patch antenna.FCStd  SIDLOC Cubesat dummy.FCStd  SIDLOC-1U-Assembly.FCStd  SatNOGS COMMS V0.3.1.FCStd  Simple structure w.  panels.FCStd  Solar Panel dummy.FCStd  Spacers.FCStd
FreeCAD_Models/phasma-mech-assembly/Simplified COTS 3D models/: 3U structure (simplified).FCStd  Coarse sun sensor.FCStd  CubeADCS Gen 2.FCStd  ESQ-126-39-x-D (satnogs comms).FCStd  ESQ-126-48-G-D.stp  Strut.step  adcs-adapter.step
STEP_Models/: github
build_artifacts/occt/: README.md
build_new/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_new/opennurbs/: Makefile  cmake_install.cmake
build_new/opennurbs/android_uuid/: Makefile  cmake_install.cmake
build_new/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_new/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_prev/: CMakeCache.txt  Makefile  cmake_install.cmake
build_prev/open2open/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open2open/: CMakeLists.txt
open2open/include/: open2open.h
open2open/include/open2open/: attrs_convert.h  fcstd_convert.h
open2open/src/: attrs_convert.cpp  brep_convert.cpp  fcstd_convert.cpp
open2open/tests/: CMakeLists.txt  test_3dm_examples.cpp  test_3dm_roundtrip.cpp  test_attrs.cpp  test_brep.cpp  test_brep_complex.cpp  test_curves.cpp  test_curves_complex.cpp  test_fcstd_attrs.cpp  test_fcstd_roundtrip.cpp  test_mesh.cpp  test_occ_roundtrip.cpp  test_step_roundtrip.cpp  test_surfaces.cpp  test_surfaces_complex.cpp
open2open/tools/: CMakeLists.txt  step2brep.cpp
opennurbs-8.24.25281.15001/: opennurbs_3dm_attributes.cpp  opennurbs_3dm_attributes.h  opennurbs_archive.cpp  opennurbs_archive.h  opennurbs_array.h  opennurbs_array_defs.h  opennurbs_curve.cpp  opennurbs_curve.h  opennurbs_decals.cpp  opennurbs_decals.h  opennurbs_defines.cpp  opennurbs_dimensionstyle.cpp  opennurbs_extensions.cpp  opennurbs_extensions.h  opennurbs_font.cpp  opennurbs_ground_plane.cpp  opennurbs_hatch.cpp  opennurbs_instance.cpp  opennurbs_internal_V5_annotation.cpp  opennurbs_internal_defines.h  opennurbs_line.cpp  opennurbs_line.h  opennurbs_linear_workflow.cpp  opennurbs_mesh.h  opennurbs_mesh_modifiers.cpp  opennurbs_model_component.cpp  opennurbs_model_component.h  opennurbs_model_geometry.cpp  opennurbs_object.cpp  opennurbs_object.h  opennurbs_post_effects.cpp  opennurbs_public.vcxproj  opennurbs_public_version.h  opennurbs_string.h  opennurbs_subd.h  opennurbs_subd_archive.cpp  opennurbs_sun.cpp  opennurbs_symmetry.cpp  opennurbs_textlog.cpp  opennurbs_version_number.cpp  (+2 more)
opennurbs-8.24.25281.15001/example_brep/: example_brep.vcxproj
opennurbs-8.24.25281.15001/example_convert/: example_convert.vcxproj
opennurbs-8.24.25281.15001/example_read/: example_read.vcxproj
opennurbs-8.24.25281.15001/example_test/: example_test.cpp  example_test.vcxproj
opennurbs-8.24.25281.15001/example_userdata/: example_userdata.vcxproj
opennurbs-8.24.25281.15001/example_write/: example_write.vcxproj
phasma-mech-assembly/: Interferance check PHASMA.FCStd  Satellite assembly.FCStd  TVAC Stand.FCStd
phasma-mech-assembly/3U COTS structure/: 3U Structure assembly.FCStd
phasma-mech-assembly/FreeCAD native models/: +Z plate aluminum.FCStd  +Z plate.FCStd  -Y plate.FCStd  40Wh Battery pack.FCStd  90deg deployed panel array dummy.FCStd  90deg deployed panel array.FCStd  ADCS adapter.FCStd  Antenna HDRM Stowed.FCStd  Antenna HDRM Sun Sensor Stowed.FCStd  CubeMag & Shunt PCB mount.FCStd  CubeMag & Shunt mount.FCStd  CubeMag compact.FCStd  CubeSense Sun sensor.FCStd  G5ANT-1AS1.FCStd  GNSS Antenna HDRM Deployed.FCStd  GNSS HDRM Stowed.FCStd  S band patch antenna.FCStd  SIDLOC Cubesat dummy.FCStd  SIDLOC-1U-Assembly.FCStd  SatNOGS COMMS V0.3.1.FCStd  SatNOGS COMMS v0.3 w dual emi shield.FCStd  Solar Panel dummy.FCStd  Solar panel 3U.FCStd  Spacers.FCStd  Starbuck Nano PLUS (simplified).FCStd  Stowed panel array.FCStd  Strut spacers.FCStd  Sun Sensor Antenna HDRM Deployed.FCStd  Umbilical PCB.FCStd  Umbilical assembly with V2 RBF.FCStd
phasma-mech-assembly/Simplified COTS 3D models/: 180deg deployed panel array.FCStd  3U structure (simplified).FCStd  ClydeSpace 30Wh battery pack (simplified).FCStd  Coarse sun sensor.FCStd  ESQ-126-38-G-D.FCStd  ESQ-126-38-G-D.stp  ESQ-126-39-x-D (SatNOGS COMMS).step  ESQ-126-39-x-D (satnogs comms).FCStd  ESQ-126-48-G-D.FCStd  SMA angled.STEP  Side plate.step
step_brep/: Curta_Assembly_0.brep  Curta_Assembly_1.brep  Curta_Assembly_10.brep  Curta_Assembly_104.brep  Curta_Assembly_11.brep  Curta_Assembly_110.brep  Curta_Assembly_116.brep  Curta_Assembly_12.brep  Curta_Assembly_125.brep  Curta_Assembly_13.brep  Curta_Assembly_133.brep  Curta_Assembly_14.brep  Curta_Assembly_146.brep  Curta_Assembly_15.brep  Curta_Assembly_16.brep  Curta_Assembly_166.brep  Curta_Assembly_17.brep  Curta_Assembly_170.brep  Curta_Assembly_171.brep  Curta_Assembly_178.brep  Curta_Assembly_18.brep  Curta_Assembly_19.brep  Curta_Assembly_199.brep  Curta_Assembly_2.brep  Curta_Assembly_214.brep  Curta_Assembly_223.brep  Curta_Assembly_240.brep  Curta_Assembly_250.brep  Curta_Assembly_3.brep  Curta_Assembly_34.brep  Curta_Assembly_4.brep  Curta_Assembly_47.brep  Curta_Assembly_5.brep  Curta_Assembly_6.brep  Curta_Assembly_68.brep  Curta_Assembly_7.brep  Curta_Assembly_77.brep  Curta_Assembly_8.brep  Curta_Assembly_88.brep  Curta_Assembly_9.brep  (+2 more)
test3dm/: CNCv2_base3D.3dm
(+7307 files in other folders)
