cmake_minimum_required(VERSION 3.16)

# Tests for open2open
# Each test is a standalone executable linked against open2open.

foreach(_test test_curves test_surfaces test_brep test_mesh)
    add_executable(${_test} ${_test}.cpp)
    target_link_libraries(${_test} PRIVATE open2open)
    add_test(NAME ${_test} COMMAND ${_test})
endforeach()

# Stress tests: curves and surfaces (no extra OCCT libraries needed)
foreach(_test test_curves_complex test_surfaces_complex)
    add_executable(${_test} ${_test}.cpp)
    target_link_libraries(${_test} PRIVATE open2open)
    add_test(NAME ${_test} COMMAND ${_test})
endforeach()

# Stress test: B-Rep complex requires BRepPrimAPI from TKPrim for
# OCCT-native primitive construction.
add_executable(test_brep_complex test_brep_complex.cpp)
target_link_libraries(test_brep_complex PRIVATE open2open TKPrim)
add_test(NAME test_brep_complex COMMAND test_brep_complex)

# Round-trip tests for the openNURBS 3dm example files.
# The example_files directory is expected to be at
# ${CMAKE_SOURCE_DIR}/../opennurbs-8.24.25281.15001/example_files
set(_3dm_example_dir
    "${CMAKE_SOURCE_DIR}/../opennurbs-8.24.25281.15001/example_files")
add_executable(test_3dm_examples test_3dm_examples.cpp)
target_link_libraries(test_3dm_examples PRIVATE open2open)
add_test(NAME test_3dm_examples
         COMMAND test_3dm_examples "${_3dm_example_dir}")

# Round-trip tests for user-supplied .3dm files in a flat directory.
# .3dm.gz files are decompressed on-the-fly to a temporary location.
# The test3dm directory is expected at ${CMAKE_SOURCE_DIR}/../test3dm
set(_3dm_roundtrip_dir "${CMAKE_SOURCE_DIR}/../test3dm")
add_executable(test_3dm_roundtrip test_3dm_roundtrip.cpp)
target_link_libraries(test_3dm_roundtrip PRIVATE open2open)
add_test(NAME test_3dm_roundtrip
         COMMAND test_3dm_roundtrip "${_3dm_roundtrip_dir}")

# Round-trip tests for OpenCASCADE .brep files:
#   OCCT → ON_Brep → OCCT, then validate with BRepCheck_Analyzer.
# The brep directory is expected at ${CMAKE_SOURCE_DIR}/../OCCT-7_9_3/data/occ
set(_occ_brep_dir "${CMAKE_SOURCE_DIR}/../OCCT-7_9_3/data/occ")
add_executable(test_occ_roundtrip test_occ_roundtrip.cpp)
target_link_libraries(test_occ_roundtrip PRIVATE open2open)
add_test(NAME test_occ_roundtrip
         COMMAND test_occ_roundtrip "${_occ_brep_dir}")

# Additional round-trip test using pre-converted STEP shapes from step_brep/.
# These .brep files were generated by tools/step2brep from the STEP_Models
# submodule STEP files and committed for fast, dependency-free regression testing
# (no STEP support needed at test time).
set(_step_brep_dir "${CMAKE_SOURCE_DIR}/../step_brep")
if(IS_DIRECTORY "${_step_brep_dir}")
    add_test(NAME test_occ_roundtrip_step_brep
             COMMAND test_occ_roundtrip "${_step_brep_dir}")
endif()

# Round-trip tests for FreeCAD .FCStd files.
# .FCStd files are ZIP archives containing *.brp OCCT BREP shapes.
# For each shape inside each archive the test runs the full round-trip:
#   BRepTools::Read → OCCTToON_Brep → ON_BrepToOCCT → BRepCheck_Analyzer
#   + surface-area and volume comparison before/after round-trip.
# The test searches recursively, so it can be pointed at either:
#   - testfcstd/            (small set of hand-picked files for quick smoke test)
#   - FreeCAD-Examples/     (git submodule, 159 files for comprehensive testing)
set(_fcstd_examples_dir "${CMAKE_SOURCE_DIR}/../FreeCAD-Examples")
set(_fcstd_smoke_dir    "${CMAKE_SOURCE_DIR}/../testfcstd")
# Prefer the submodule if it has been checked out; fall back to smoke dir.
if(EXISTS "${_fcstd_examples_dir}/README.md")
    set(_fcstd_dir "${_fcstd_examples_dir}")
else()
    set(_fcstd_dir "${_fcstd_smoke_dir}")
endif()
add_executable(test_fcstd_roundtrip test_fcstd_roundtrip.cpp)
target_link_libraries(test_fcstd_roundtrip PRIVATE open2open)
add_test(NAME test_fcstd_roundtrip
         COMMAND test_fcstd_roundtrip "${_fcstd_dir}")


# Additional FCStd test using freecad-models submodule (if checked out).
# freecad-models uses the older FreeCAD "dump" format (concatenated entries
# with size|size|type|filename\n headers) rather than ZIP; test_fcstd_roundtrip
# detects and parses this format automatically.
set(_freecad_models_dir "${CMAKE_SOURCE_DIR}/../freecad-models")
if(EXISTS "${_freecad_models_dir}/README.rst")
    add_test(NAME test_fcstd_freecad_models
             COMMAND test_fcstd_roundtrip "${_freecad_models_dir}")
endif()

# Round-trip tests for STEP files.
# Reads each .stp/.step file found recursively using STEPControl_Reader,
# extracts B-Rep shapes, and runs the full OCCTToON_Brep → ON_BrepToOCCT
# round-trip with BRepCheck_Analyzer + area/volume validation.
#
# STEP support requires DataExchange toolkits from build_artifacts/occt.
# The STEP_LINK_LIBS list mirrors OpenCASCADE_DataExchange_LIBRARIES plus
# the ApplicationFramework persistence libs they depend on.
set(_STEP_LINK_LIBS
    TKDESTEP TKXSBase TKDE TKDECascade
    TKXCAF
    TKCDF TKLCAF TKCAF
    TKBinL TKXmlL TKBin TKXml TKStdL TKStd
    TKTObj TKBinTObj TKXmlTObj TKVCAF
    TKBinXCAF TKXmlXCAF
    TKService TKV3d
    TKExpress
)

add_executable(test_step_roundtrip test_step_roundtrip.cpp)
target_link_libraries(test_step_roundtrip PRIVATE open2open ${_STEP_LINK_LIBS})

# Default STEP test directory: STEP_Models submodules (if checked out),
# falling back to any .stp/.step files in OCCT-7_9_3/data.
set(_step_models_dir "${CMAKE_SOURCE_DIR}/../STEP_Models")
set(_step_fallback_dir "${CMAKE_SOURCE_DIR}/../OCCT-7_9_3/data")

# Prefer checked-out submodule dirs
if(EXISTS "${_step_models_dir}/Curta-Type-I-3x")
    set(_step_dir "${_step_models_dir}")
elseif(IS_DIRECTORY "${_step_models_dir}")
    set(_step_dir "${_step_models_dir}")
else()
    set(_step_dir "${_step_fallback_dir}")
endif()

add_test(NAME test_step_roundtrip
         COMMAND test_step_roundtrip "${_step_dir}")
